--- a/PaulZero.RoutineEnforcer/App.xaml
+++ b/PaulZero.RoutineEnforcer/App.xaml
@@ -1,10 +1,7 @@
 ﻿<Application x:Class="PaulZero.RoutineEnforcer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views/Windows/MainWindow.xaml"
-             DispatcherUnhandledException="Application_DispatcherUnhandledException"
-             Exit="App_Exit"
-             Startup="Application_Startup">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"             
+             DispatcherUnhandledException="Application_DispatcherUnhandledException">
     <Application.Resources>
     </Application.Resources>
 </Application>
